--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,9 +10,10 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.12",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arfoundation": "3.0.1",
-    "com.unity.xr.arkit": "3.0.1",
-    "com.unity.xr.legacyinputhelpers": "2.0.2",
+    "com.unity.xr.arfoundation": "4.0.2",
+    "com.unity.xr.arkit": "4.0.2",
+    "com.unity.xr.legacyinputhelpers": "2.1.4",
+    "com.unity.xr.management": "3.2.13",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
